--- a/button_image.kv
+++ b/button_image.kv
@@ -7,9 +7,7 @@
         spacing: 20
 
         Label:
-            id: search_button
-            text: "Search?"
-            font_size: 30
+            id: search_loop
 
         Button:
             font_size: 32
